--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "webpack": "^4.12.0"
   },
   "scripts": {
-    "build:watch": "NODE_ENV=development WATCH=watch webpack",
+    "build:watch": "webpack --watch",
     "build:dev": "NODE_ENV=development webpack",
     "build:prod": "webpack",
     "build:clean": "./node_modules/.bin/rimraf ./themes/THEME_NAME/assets/css && ./node_modules/.bin/rimraf ./themes/THEME_NAME/assets/js"
